force-app/main/default/objects/UST_Event_Fee__c/UST_Event_Fee__c.object-meta.xml
<CustomObject>
    <description>Fees related to this event registration payment</description>
    <label>UST Event Fee</label>
    <nameField>
        <displayFormat>EvtFee-{0000}</displayFormat>
        <label>UST Event Fee</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UST Event Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>