force-app/main/default/objects/UST_Event_Fee__c/fields/Event_Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Appointment_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If an appointment type exists for this fee this is the reference to that record.</description>
    <inlineHelpText>If an appointment type exists for this fee this is the reference to that record.</inlineHelpText>
    <label>Event Appointment Type</label>
    <referenceTo>UST_Event_Appointment_Type__c</referenceTo>
    <relationshipLabel>UST Event Fees</relationshipLabel>
    <relationshipName>UST_Event_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>