force-app/main/default/objects/UST_Event_Fee__c/fields/Event_Fee__c.field-meta.xml
<CustomField>
    <fullName>Event_Fee__c</fullName>
    <description>The amount of fee incurred.</description>
    <inlineHelpText>UST Event Fee _ Salesforce.html</inlineHelpText>
    <label>Event Fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>