force-app/main/default/objects/UST_Event_Fee__c/fields/Event_Registration__c.field-meta.xml
<CustomField>
    <fullName>Event_Registration__c</fullName>
    <label>Event Registration</label>
    <referenceTo>UST_Event_Registration__c</referenceTo>
    <relationshipLabel>UST Event Fees</relationshipLabel>
    <relationshipName>UST_Event_Fees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>