force-app/main/default/objects/UST_Event_Fee__c/fields/UST_Event__c.field-meta.xml
<CustomField>
    <fullName>UST_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UST Event</label>
    <referenceTo>UST_Event__c</referenceTo>
    <relationshipLabel>UST Event Fees</relationshipLabel>
    <relationshipName>UST_Event_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>