force-app/main/default/objects/UST_Event_Fee__c/fields/UST_Event_Payment__c.field-meta.xml
<CustomField>
    <fullName>UST_Event_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Connects fee to payment record</description>
    <inlineHelpText>Connects fee to payment record</inlineHelpText>
    <label>UST Event Payment</label>
    <referenceTo>UST_Event_Payment__c</referenceTo>
    <relationshipLabel>UST Event Fees</relationshipLabel>
    <relationshipName>UST_Event_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>